# WindSend

./: .gitignore  LICENSE  README-EN.md  README.md  build-win.bat  build.bat  build.sh  build_android.sh  build_linux.sh  build_linux_x64.sh  build_macos.sh  build_windows.sh  env.sh  todo  version.sh
.devcontainer/: .env  Dockerfile  devcontainer.json  docker-compose.yml
.github/: FUNDING.yml
.github/workflows/: Go-Build.yml  Go-Tests.yml  Release  Release.yml  flutter_build.yml  rust_build.yml  rust_linux_musl_test.yml  rust_test.yml
app_icon/macos/: AppIcon.icns
docs/: PROJECT_OVERVIEW.md
flutter/clipboard/: README.md  pubspec.yaml
flutter/clipboard/android/app/: build.gradle
flutter/clipboard/ios/Runner/: Info.plist
flutter/clipboard/ios/Runner.xcodeproj/: project.pbxproj
flutter/clipboard/lib/: file.dart  main.dart  web.dart
flutter/clipboard/lib/aes_lib2/: aes_crypt_null_safe.dart
flutter/clipboard/linux/: CMakeLists.txt  my_application.cc
flutter/clipboard/macos/Flutter/: GeneratedPluginRegistrant.swift
flutter/clipboard/macos/Runner.xcodeproj/: project.pbxproj
flutter/clipboard/test/: widget_test.dart
flutter/clipboard/web/: index.html  manifest.json
flutter/clipboard/windows/: CMakeLists.txt
flutter/clipboard/windows/runner/: Runner.rc  main.cpp
flutter/wind_send/: .gitignore  README.md  pubspec.yaml
flutter/wind_send/android/: .gitignore  build.gradle  build.gradle.kts  gradle.properties
flutter/wind_send/android/app/: build.gradle  build.gradle.kts
flutter/wind_send/ios/Runner/: Info.plist
flutter/wind_send/ios/Runner.xcodeproj/: project.pbxproj
flutter/wind_send/lib/: about.dart  cnf.dart  device.dart  deviceEdit.dart  device_card.dart  device_crypto.dart  device_discovery.dart  device_edit.dart  device_state.dart  device_validators.dart  fileTransfer.dart  file_transfer.dart  indicator.dart  language.dart  main.dart  request.dart  setting.dart  socket.dart  sorting.dart  spmc.dart  textEdit.dart  text_edit.dart  theme.dart  toast.dart  utils.dart  web.dart
flutter/wind_send/lib/clipboard/: clipboard.dart  clipboard_service.dart
flutter/wind_send/lib/clipboard_sync/: clipboard_domain.dart  clipboard_domain_adapter.dart  clipboard_event_hub.dart  clipboard_sync_history.dart  clipboard_sync_session.dart  clipboard_sync_session_registry.dart  clipboard_sync_transport.dart  remote_peer_key.dart  sync_session_protocol.dart  sync_session_queue.dart  sync_session_watcher.dart
flutter/wind_send/lib/crypto/: aes.dart
flutter/wind_send/lib/device_setting/: certificate_detail.dart  device_edit.dart  relay_setting.dart
flutter/wind_send/lib/file_picker/: fast_filepicker.dart  file_picker_service.dart  filepicker.dart
flutter/wind_send/lib/protocol/: protocol.dart
flutter/wind_send/lib/utils/: logger.dart  platform_device_info.dart  uri.dart  utils.dart  x509.dart
flutter/wind_send/linux/: CMakeLists.txt  my_application.cc
flutter/wind_send/linux/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
flutter/wind_send/test/: aes_ctr2_test.dart  aes_ctr_test.dart  aes_gcm2_test.dart  aes_gcm3_test.dart  aes_gcm4_test.dart  aes_gcm_stream_test.dart  aes_gcm_test.dart  clipboard_domain_adapter_fallback_test.dart  clipboard_event_hub_test.dart  clipboard_sync_domain_test.dart  clipboard_sync_history_test.dart  clipboard_sync_protocol_test.dart  clipboard_sync_session_test.dart  crypto_test.dart  device_clipboard_transport_test.dart  platform_device_info_test.dart  read_req_head_only_test.dart  remote_peer_key_test.dart  widget_test.dart
flutter/wind_send/web/: index.html  manifest.json
flutter/wind_send/windows/: CMakeLists.txt
go/: README.md  clipboard.go  config.go  down.go  file.go  go.mod  go.sum  icon.go  inform.go  main.go  route.go  route2.go  statusBar.go  systray.go  tls.go  upload.go  utils.go  web.go
go/language/: language.go
test_file/1/: 1.go
test_file/2/: 2.go
windSend-rs/: Cargo.toml  build.rs  install-sys.sh  install.sh  uninstall-sys.sh  uninstall-user.sh
windSend-rs/src/: config.rs  file.rs  icon_bytes.rs  language.rs  main.rs  status.rs  systray.rs  web.rs
windSend-rs/src/relay/: main.rs  mod.rs  protocol.rs  relay.rs  run.rs  transfer.rs
windSend-rs/src/route/: copy.rs  mod.rs  paste.rs  protocol.rs  resp.rs  route.rs  router.rs  sync_session.rs  transfer.rs
windSend-rs/src/sync/: clipboard_domain.rs  clipboard_event_hub.rs  clipboard_watcher.rs  mod.rs  session_registry.rs  session_state.rs  sync_frame.rs
windSend-rs/src/utils/: auto_start.rs  clipboard.rs  encrypt.rs  mod.rs  tls.rs  util.rs  utils.rs  win_toast_notif.rs
(+56 files in other folders)
