[package]
name = "wind_send"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# tray-item = "0.8.0"
log = "0.4.0"
env_logger = "0.11.0"
aes = "0.8.3"
hex = "0.4.3"
block-modes = "0.9"
hex-literal = "0.4"
ctr = "0.9"
tokio = { version = "1", features = ["full"] }
rand = "0.8"
rfd = "0.13.0"
image = "0.24"
crossbeam-channel = "0"
tray-icon = "0.11.0"
tao = "0.24.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
rcgen = { version = "0.12.0", features = ["pem", "x509-parser"] }
rsa = "0.9.2"
ring = "0.17"
pem = { version = "3" }
time = { version = "0.3", features = ["macros", "local-offset"] }
lazy_static = "1.4"
home = "0.5.5"
encoding = "0.2.33"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "fmt",
    "time",
    "local-time",
] }
tracing-appender = "0.2"
sha2 = "0.10"
anyhow = "1.0"
cbc = "0.1.2"
cipher = "0.4"
chrono = "0.4.31"
subslice = "0.2.3"
regex = "1.9.6"
global-hotkey = "0.4"
reqwest = { version = "0.11", features = ["multipart", "cookies"] }
arboard = { version = "3.3.0", features = [
    "core-graphics",
    "image",
    "image-data",
    "wayland-data-control",
    "wl-clipboard-rs",
] }
notify-rust = "4.10"
tokio-native-tls = "0.3.1"
rustls-pemfile = "1.0.3"
webpki-roots = "0.26.0"
moka = { version = "0.12", features = ["future", "sync"] }
# rustls = { version = "0.21.7", features = ["dangerous_configuration"] }
# rustls = { path = "Downloads/rustls-main/rustls/rustls", features = [
#     "ring",
# ] }
# pki-types = { package = "rustls-pki-types", version = "0.2.1", features = [
#     "std",
# ] }
# rustls = { path = "./rustls/rustls" }
# tokio-rustls = { path = "./tokio-rustls" }
tokio-rustls = { git = "https://github.com/doraemonkeys/tokio-rustls.git", branch = "rustls-0.21.7" }
clipboard-files = { git = "https://github.com/doraemonkeys/clipboard-files" }
hostname = "^0.3"
walkdir = "2.4"

[build-dependencies]
windres = "*"


[dev-dependencies]
tao = "0.24.1"
