[package]
name = "wind_send"
version = "1.2.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
disable-systray-support = []


[dependencies]
# tray-item = "0.8.0"
log = "0.4.0"
aes = "0.8.3"
hex = "0.4.3"
tokio = { version = "1", features = ["full"] }
rand = "0.8"
image = "0.25"
crossbeam-channel = "0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
# 依赖ring v0.16.20导致aarch64-windows编译失败
# x509-parser升级到0.16.0即可解决
rcgen = { version = "0.13", features = ["pem"] }
pem = { version = "3" }
time = { version = "0.3", features = ["macros", "local-offset"] }
lazy_static = "1.4"
home = "0.5.5"
encoding = "0.2.33"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "fmt",
    "time",
    "local-time",
] }
tracing-appender = "0.2"
sha2 = "0.10"
anyhow = "1.0"
cbc = "0.1.2"
cipher = "0.4"
chrono = "0.4.31"
subslice = "0.2.3"
regex = "1.9.6"
arboard = { version = "3.3.0", features = [
    "core-graphics",
    "image",
    "image-data",
    "wayland-data-control",
    "wl-clipboard-rs",
] }
# notify-rust依赖zbus_names v2.6.0导致ubuntu编译失败
# notify-rust = "4.10"
notify-rust = { git = "https://github.com/doraemonkeys/notify-rust", branch = "main" }
tokio-native-tls = "0.3.1"
rustls-pemfile = "2.0.0"
tokio-rustls = { git = "https://github.com/doraemonkeys/tokio-rustls.git", branch = "ignore_invalid_SNI_0.25.0" }
# tokio-rustls = "0.25.0"
hostname = "0.4"
walkdir = "2.4"
socket2 = { features = ["all"], version = "0.5.5" }
clipboard-rs = "0.1.4"

# rustls = { version = "0.21.7", features = ["dangerous_configuration"] }
# rustls = { path = "Downloads/rustls-main/rustls/rustls", features = [
#     "ring",
# ] }
# pki-types = { package = "rustls-pki-types", version = "0.2.1", features = [
#     "std",
# ] }
# rustls = { path = "./rustls/rustls" }
# tokio-rustls = { path = "./tokio-rustls" }
[target.'cfg(all(target_os = "linux", target_env = "musl"))'.dependencies]
openssl = { version = "*", features = ["vendored"] }

[target.'cfg(not(all(target_os = "linux", target_env = "musl")))'.dependencies]
tao = "0.27"
tray-icon = "0.13"
reqwest = { version = "0.12", features = ["multipart", "cookies"] }
# rfd 0.14.0 在ubuntu上编译失败
rfd = "0.14.1"

[build-dependencies]
windres = "*"


[dev-dependencies]
tao = "0.27"
